--- a/vol/templates/vol/iata_add.html
+++ b/vol/templates/vol/iata_add.html
@@ -1,4 +1,5 @@
 {% extends 'vol/base_homepage.html' %}
+{% load i18n %}
 {% block title %} Nouveau code IATA {% endblock %}
 {% block content %}
 <div class="row">
