--- a/vol/templates/vol/immatriculation_add.html
+++ b/vol/templates/vol/immatriculation_add.html
@@ -1,4 +1,5 @@
 {% extends 'vol/base_homepage.html' %}
+{% load i18n %}
 {% block title %} Nouvelle immatriculation {% endblock %}
 {% block content %}
 
