--- a/vol/templates/vol/index.html
+++ b/vol/templates/vol/index.html
@@ -1,5 +1,7 @@
 {% extends 'vol/base_homepage.html' %}
-{% block title %} Vols {% endblock %}
+{% load i18n %}
+{% load my_tags %}
+{% block title %} {% trans "Flights" %} {% endblock %}
 {% block content %}
 <script>
 $(document).ready(function() {
@@ -12,26 +14,26 @@ $(document).ready(function() {
 {% block active_secondary_nav %} {% endblock %}
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link active" href="{% url 'index' %}">Tous les vols</a>
+        <a class="nav-link active" href="{% url 'index' %}">{% trans "All flights" %}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'somme' %}">Totaux</a>
+        <a class="nav-link" href="{% url 'somme' %}">{% trans "Totals" %}</a>
     </li>
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ajouter</a>
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Add" %}</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="{% url 'new_vol' %}">Vol</a>
+          <a class="dropdown-item" href="{% url 'new_vol' %}">{% trans "Flight" %}</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'new_pilote' %}">Pilote</a>
-          <a class="dropdown-item" href="{% url 'new_immatriculation' %}">Immatriculation</a>
-          <a class="dropdown-item" href="{% url 'new_code_iata' %}">Aéroport</a>
-          <a class="dropdown-item" href="{% url 'new_type_avion' %}">Type d'Avion</a>
+          <a class="dropdown-item" href="{% url 'new_pilote' %}">{% trans "Pilot" %}</a>
+          <a class="dropdown-item" href="{% url 'new_immatriculation' %}">{% trans "Registration" %}</a>
+          <a class="dropdown-item" href="{% url 'new_code_iata' %}">{% trans "Airport" %}</a>
+          <a class="dropdown-item" href="{% url 'new_type_avion' %}">{% trans "Aircraft Type" %}</a>
         </div>
     </li>
 </ul>
 
     <div class="row">
-        <div class="col"><h2 class="display-4 mt-4 mb-4">Affichage des vols</h2></div>
+        <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "Display all flights" %}</h2></div>
     </div>
         {% if object_list %}
         <div class="row">
@@ -40,21 +42,21 @@ $(document).ready(function() {
                 <table class="table table-striped table-bordered table-hover dt-responsive nowrap" id="table_id">
                 <thead  class="thead-dark">
                     <tr>
-                        <th scope="col">Date</th>
-                        <th scope="col">Vol</th>
-                        <th scope="col">CDB</th>
-                        <th scope="col">OPL</th>
-                        <th scope="col">OBS1</th>
-                        <th scope="col">OBS2</th>
-                        <th scope="col">Instructeur</th>
-                        <th scope="col">Durée Jour</th>
-                        <th scope="col">Durée Nuit</th>
-                        <th scope="col">Simu</th>
-                        <th scope="col">Arrivées IFR</th>
-                        <th scope="col">Durée IFR</th>
-                        <th scope="col">Fonction</th>
-                        <th scope="col">Immatriculation</th>
-                        <th scope="col">Type d'avion</th>
+                        <th scope="col">{% trans "Date" %}</th>
+                        <th scope="col">{% trans "Flight" %}</th>
+                        <th scope="col">{% trans "PIC" %}</th>
+                        <th scope="col">{% trans "FO" %}</th>
+                        <th scope="col">{% trans "OBS1" %}</th>
+                        <th scope="col">{% trans "OBS2" %}</th>
+                        <th scope="col">{% trans "Instructor" %}</th>
+                        <th scope="col">{% trans "Duration Day" %}</th>
+                        <th scope="col">{% trans "Duration Night" %}</th>
+                        <th scope="col">{% trans "Simu" %}</th>
+                        <th scope="col">{% trans "IFR Arrival" %}</th>
+                        <th scope="col">{% trans "Duration IFR" %}</th>
+                        <th scope="col">{% trans "Position" %}</th>
+                        <th scope="col">{% trans "Registration" %}</th>
+                        <th scope="col">{% trans "Aircraft Type" %}</th>
                     </tr>
                 </thead>
                     <tbody>
@@ -122,7 +124,7 @@ $(document).ready(function() {
             <div class="col"></div>
         </div>
         {% else %}
-            <p>Il n'y a pas de vols enregistrés.</p>
+            <p>{% trans "There are no registered flights." %}</p>
         {% endif %}
     </div>
 {% endblock %}
