--- a/vol/templates/vol/type_avion_add.html
+++ b/vol/templates/vol/type_avion_add.html
@@ -1,4 +1,5 @@
 {% extends 'vol/base_homepage.html' %}
+{% load i18n %}
 {% block title %} Nouveau type d'avion {% endblock %}
 {% block content %}
 
