--- a/vol/templates/vol/base_homepage.html
+++ b/vol/templates/vol/base_homepage.html
@@ -92,7 +92,7 @@
                   <a class="dropdown-item" href="{% url 'new_vol' %}">{% trans "Flight" %}</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'new_pilote' %}">{% trans "Pilot" %}</a>
-                  <a class="dropdown-item" href="{% url 'new_immatriculation' %}">{% trans "Registration" %}</a>
+                  <a class="dropdown-item" href="{% url 'new_immatriculation' %}">{% trans "Plane" %}</a>
                   <a class="dropdown-item" href="{% url 'new_code_iata' %}">{% trans "Airport" %}</a>
                   <a class="dropdown-item" href="{% url 'new_type_avion' %}">{% trans "Aircraft Type" %}</a>
                 </div>
