--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -1,5 +1,6 @@
 {% extends 'vol/base_homepage.html' %}
-{% block title %} Détails du vol {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Flight details" %} {% endblock %}
 {% block content %}
 {% load widget_tweaks %}
 
@@ -14,12 +15,12 @@
             <polyline fill="none" stroke="#000000" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" points="37,15 20,32 
                 37,49   "/>
         </g>
-        </svg></a>| Détails du vol</h2></div>
+        </svg></a>| {% trans "Flight details" %}</h2></div>
 </div>
 <div class="row">
     <div class="col-md-12">
         <div class="alert alert-warning" role="alert">
-        La modification de vols n'est pas encore disponible. 
+        {% trans "Flight modification is not yet available." %}
         </div>
     </div>
 </div>
@@ -31,7 +32,7 @@
         <form action="{% url 'remove_vol' pk=vol.pk %}" method="post" style="display: inline;">
             {% csrf_token %}
             <input type="hidden" name="immatriculation_id" value="{{ vol.id }}" />
-            <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le vol" onclick="return confirm('Are you sure you want to delete this?')">
+            <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="{% trans "Delete the flight" %}" onclick="return confirm('{% trans "Are you sure you want to delete this flight?" %}')">
                 <button type="submit" class="btn btn-outline-danger"><i class="far fa-trash-alt"></i></button>
             </a>
         </form>
@@ -138,15 +139,15 @@
                                             <span class="text-secondary">{% if object.vol_ifr != "0" %} {{ object.duree_ifr }}{% else %}<span class="text-secondary">&ensp; &mdash;{% endif %}</span></td>
                                     </tr>
                                     <tr>
-                                        <td class="align-middle text-uppercase no-padding"><strong>Fonction</strong></td>
+                                        <td class="align-middle text-uppercase no-padding"><strong>{% trans "Function" %}</strong></td>
                                         <td class="align-middle text-left"><span class="text-secondary">{{ object.get_fonction_display }}</span></td>
                                     </tr>
                                     <tr>
-                                        <td class="align-middle text-uppercase no-padding"><strong>Poste</strong></td>
+                                        <td class="align-middle text-uppercase no-padding"><strong>{% trans "Position" %}</strong></td>
                                         <td class="align-middle text-left"><span class="text-secondary">{{ object.get_poste_display }}</span></td>
                                     </tr>
                                     <tr>
-                                        <td class="align-middle text-uppercase no-padding"><strong>{% if object.vol_simu %}<span class="text-body">Simulateur</span>{% else %}<span class="text-secondary">Simulateur</span>{% endif %}</td></strong>
+                                        <td class="align-middle text-uppercase no-padding"><strong>{% if object.vol_simu %}<span class="text-body">{% trans "Simulator" %}</span>{% else %}<span class="text-secondary">{% trans "Simulator" %}</span>{% endif %}</td></strong>
                                         <td class="align-middle text-left">
                                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                                  width="16px" height="16px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
@@ -166,7 +167,7 @@
                                             <span class="text-secondary">{% if object.vol_simu %} {{ object.duree_simu }}{% else %}<span class="text-secondary">&ensp; &mdash;{% endif %}</span></td>
                                     </tr>
                                     <tr>
-                                        <td colspan="2" class="text-uppercase no-padding"><strong>Observations</strong></td>
+                                        <td colspan="2" class="text-uppercase no-padding"><strong>{% trans "Notes" %}</strong></td>
                                     </tr>
                                     <tr>
                                         <td colspan="2" style="border:0;" class="no-padding">{{ object.observation }}</td>
@@ -180,20 +181,20 @@
             <div class="col-md-3 col-sd-12 offset-md-1 mt-3 mt-md-0">
 
                 <div class="card">
-                    <div class="card-header"><h3>Avion <i class="fas fa-plane"></i></h3></div>
+                    <div class="card-header"><h3>{% trans "Aircraft" %} <i class="fas fa-plane"></i></h3></div>
                     <div class="card-body p-0">
                         <table class="table mb-0">
                             <tbody>
                             <tr>
-                                <td class="align-middle">Immatriculation</td>
+                                <td class="align-middle">{% trans "Registration" %}</td>
                                 <td class="align-middle">{{ object.immatriculation }}</td>
                             </tr>
                             <tr>
-                                <td class="align-middle">Type d'avion</td>
+                                <td class="align-middle">{% trans "Aircraft type" %}</td>
                                 <td class="align-middle">{{ object.immatriculation.type_avion }}</td>
                             </tr>
                             <tr>
-                                <td class="align-middle">Moteurs</td>
+                                <td class="align-middle">{% trans "Engines" %}</td>
                                 <td class="align-middle">{{ object.immatriculation.type_avion.get_nb_moteurs_display }}</td>
                             </tr>
                             </tbody>
@@ -203,20 +204,20 @@
             </div>
         </div>
         <div class="row">
-                <div class="col-md-2 offset-md-5 mt-md-3 mt-3"><h1>Équipage</h1></div>
+                <div class="col-md-2 offset-md-5 mt-md-3 mt-3"><h1>{% trans "Crew" %}</h1></div>
         </div>
         <div class="row">
             <div class="col-md-12 col-sd-12">
                 <div class="card-deck">
                     <div class="card text-white bg-dark">
                         <div class="card-body">
-                            <h5 class="card-title">Commandant de bord</h5>
+                            <h5 class="card-title">{% trans "Pilot in Command" %}</h5>
                             <p class="card-text">{{ object.cdb }}</p>
                         </div>
                     </div>
                     <div class="card text-white bg-dark">
                         <div class="card-body">
-                        <h5 class="card-title">Copilote</h5>
+                        <h5 class="card-title">{% trans "First Officer" %}</h5>
                         <p class="card-text">{{ object.opl }}</p>
                         </div>
                     </div>
@@ -226,11 +227,11 @@
                         <div class="card text-muted bg-light border-style: dashed;">
                     {% endif %}
                             <div class="card-body">
-                                <h5 class="card-title">Observateur 1</h5>
+                                <h5 class="card-title">{% trans "Observer" %} 1</h5>
                                 {% if object.obs1 %}
                                     <p class="card-text">{{ object.obs1 }}</p>
                                 {% else %}
-                                    <p class="card-text">Absent</p>
+                                    <p class="card-text">{% trans "None" %}</p>
                                 {% endif %}
                             </div>
                         </div>
@@ -240,11 +241,11 @@
                         <div class="card text-muted bg-light border-style: dashed;">
                     {% endif %}
                             <div class="card-body">
-                                <h5 class="card-title">Observateur 2</h5>
+                                <h5 class="card-title">{% trans "Observer" %} 2</h5>
                                 {% if object.obs2 %}
                                     <p class="card-text">{{ object.obs2 }}</p>
                                 {% else %}
-                                    <p class="card-text">Absent</p>
+                                    <p class="card-text">{% trans "None" %}</p>
                                 {% endif %}
                             </div>
                         </div>
@@ -254,11 +255,11 @@
                         <div class="card text-muted bg-light border-style: dashed;">
                     {% endif %}
                             <div class="card-body">
-                                <h5 class="card-title">Instructeur</h5>
+                                <h5 class="card-title">{% trans "Instructor" %}</h5>
                                 {% if object.instructeur %}
                                     <p class="card-text">{{ object.instructeur }}</p>
                                 {% else %}
-                                    <p class="card-text">Absent</p>
+                                    <p class="card-text">{% trans "None" %}</p>
                                 {% endif %}
                             </div>
                         </div>
