--- a/vol/templates/vol/iata_add.html
+++ b/vol/templates/vol/iata_add.html
@@ -1,14 +1,14 @@
 {% extends 'vol/base_homepage.html' %}
 {% load i18n %}
-{% block title %} Nouveau code IATA {% endblock %}
+{% block title %} {% trans "New airport" %} {% endblock %}
 {% block content %}
+
 <div class="row">
-    <div class="col"><h2 class="display-4 mt-4 mb-4">Nouveau code IATA</h2></div>
+    <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "New airport" %}</h2></div>
 </div>
 {% load widget_tweaks %}
     <form method="POST" class="post-form" id="new_pilote">{% csrf_token %}
         {{ form.non_field_errors }}
-
         <div class="form-row">
             <div class="form-group col-md-3">
                 <div class="fieldWrapper">
@@ -28,18 +28,18 @@
 
         <div class="form-row">
             <div class="form-group col-md-12">
-                <button type="submit" class="save btn btn-primary">Enregistrer</button>
+                <button type="submit" class="save btn btn-primary">{% trans "Save" %}</button>
             </div>
         </div>
     </form>
 
     <div class="row">
-        <div class="col"><h2 class="display-4 mt-4 mb-4">Liste des aéroports</h2></div>
+        <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "List of airports" %}</h2></div>
     </div>
     <div class="row">
         <div class="col">
             <div class="alert alert-warning" role="alert">
-                Il est impossible de supprimer un aéroport lié à un vol. Afin de supprimer un aéroport, il faut en premier lieu supprimer ou modifier le ou les vols liés.
+                {% trans "It is impossible to delete an airport linked to a flight. In order to delete an airport, it is first necessary to delete or modify the linked flight(s)." %}
             </div>
         </div>
     </div>
@@ -49,9 +49,9 @@
                 <table class="table table-striped table-bordered table-hover table-sm dt-responsive nowrap" id="table_id">
                     <thead>
                     <tr class="thead-dark">
-                        <th scope="col" style="width: 45%">Code IATA</th>
-                        <th scope="col" style="width: 45%">Ville</th>
-                        <th scope="col" style="width: 10%">Actions</th>
+                        <th scope="col" style="width: 45%">{% trans "IATA Code" %}</th>
+                        <th scope="col" style="width: 45%">{% trans "City" %}</th>
+                        <th scope="col" style="width: 10%">{% trans "Action" %}</th>
                     </tr>
                 </thead>
                     <tbody>
@@ -69,9 +69,9 @@
                                             {% for iata in iata_exists %}
                                                 {% if code_iata.code_iata == iata.0 %}
                                                     {% if iata.1 == True %}
-                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Impossible de supprimer l'aéroport car un vol lui est lié" onclick="return confirm('Voulez-vous vraiement supprimer cet aéroport ?')"><button type="submit" class="btn btn-secondary btn-sm" disabled><i class="far fa-trash-alt"></i></button>
+                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="{% trans "Unable to delete the airport because a flight is linked to it" %}" onclick="return confirm('{% trans "Do you really want to delete this airport?" %}')"><button type="submit" class="btn btn-secondary btn-sm" disabled><i class="far fa-trash-alt"></i></button>
                                                     {% else %}
-                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer l'aéroport" onclick="return confirm('Voulez-vous vraiement supprimer cet aéroport ?')"><button type="submit" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
+                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="{% trans "Delete the airport" %}" onclick="return confirm('{% trans "Do you really want to delete this airport?" %}')"><button type="submit" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
                                                     {% endif %}
                                                 {% endif %}
                                             {% endfor %}
@@ -86,6 +86,6 @@
             </div>
         </div>
     {% else %}
-        <p>Il n'y a pas de code IATA enregistrés.</p>
+        <p>{% trans "There are no registered airports. "%}</p>
     {% endif %}
 {% endblock %}
