--- a/vol/templates/vol/immatriculation_add.html
+++ b/vol/templates/vol/immatriculation_add.html
@@ -1,18 +1,14 @@
 {% extends 'vol/base_homepage.html' %}
 {% load i18n %}
-{% block title %} Nouvelle immatriculation {% endblock %}
+{% block title %} {% trans "New Plane" %} {% endblock %}
 {% block content %}
 
 <div class="row">
-    <div class="col"><h2 class="display-4 mt-4 mb-4">Nouvel avion</h2></div>
+    <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "New Plane" %}</h2></div>
 </div>
 {% load widget_tweaks %}
-
     <form method="POST" class="post-form" id="new_immatriculation" action="">{% csrf_token %}
-
-
         {{ form.non_field_errors }}
-
         <div class="form-row">
             <div class="form-group col-md-3">
                 <div class="fieldWrapper">
@@ -37,18 +33,18 @@
 
         <div class="form-row">
             <div class="form-group col-md-12">
-                <button type="submit" class="save btn btn-primary">Enregistrer</button>
+                <button type="submit" class="save btn btn-primary">{% trans "Save" %}</button>
             </div>
         </div>
     </form>
 
     <div class="row">
-        <div class="col"><h2 class="display-4 mt-4 mb-4">Liste des avions</h2></div>
+        <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "List of planes" %}</h2></div>
     </div>
     <div class="row">
         <div class="col">
             <div class="alert alert-warning" role="alert">
-                Il est impossible de supprimer un avion lié à un vol. Afin de supprimer un avion, il faut en premier lieu supprimer ou modifier le ou les vols liés.
+                {% trans "It is impossible to delete a plane linked to a flight. In order to delete a plane, it is first necessary to delete or modify the linked flight(s)." %}
             </div>
         </div>
     </div>
@@ -58,9 +54,9 @@
                 <table class="table table-striped table-bordered table-hover table-sm dt-responsive nowrap" id="table_id">
                     <thead>
                     <tr class="thead-dark">
-                        <th scope="col" style="width: 45%">Immatriculation</th>
-                        <th scope="col" style="width: 45%">Type d'avion</th>
-                        <th scope="col" style="width: 10%">Actions</th>
+                        <th scope="col" style="width: 45%">{% trans "Registration Number" %}</th>
+                        <th scope="col" style="width: 45%">{% trans "Aircraft Type" %}</th>
+                        <th scope="col" style="width: 10%">{% trans "Actions" %}</th>
                     </tr>
                 </thead>
                     <tbody>
@@ -79,9 +75,9 @@
                                             {% for immat in immat_exists %}
                                                 {% if immatriculation.immatriculation == immat.0 %}
                                                     {% if immat.1 == True %}
-                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Impossible de supprimer l'avion car un vol lui est lié" onclick="return confirm('Voulez-vous vraiement supprimer cet avion ?')"><button type="submit" class="btn btn-secondary btn-sm" disabled><i class="far fa-trash-alt"></i></button>
+                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="{% trans "Unable to delete the plane because a flight is linked to it" %}" onclick="return confirm('{% trans "Do you really want to delete this plane?" %}')"><button type="submit" class="btn btn-secondary btn-sm" disabled><i class="far fa-trash-alt"></i></button>
                                                     {% else %}
-                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer l'avion" onclick="return confirm('Voulez-vous vraiement supprimer cet avion ?')"><button type="submit" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
+                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="{% trans "Delete the plane" %}" onclick="return confirm('{% trans "Do you really want to delete this plane?" %}')"><button type="submit" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
                                                     {% endif %}
                                                 {% endif %}
                                             {% endfor %}
@@ -96,7 +92,7 @@
             </div>
         </div>
     {% else %}
-        <p>Il n'y a pas d'immatriculations enregistrées.</p>
+        <p>{% trans "There are no registered planes. "%}</p>
     {% endif %}
 
 
