--- a/vol/templates/vol/profile.html
+++ b/vol/templates/vol/profile.html
@@ -17,6 +17,7 @@
 
 {% else %}
     {% if user.is_authenticated %}
+
         <div class="row">
             <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "User profile" %}</h2></div>
         </div>
@@ -36,21 +37,20 @@
         </div>
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                {% get_verbose_field_name user "email" as var_email %}
-                {% trans var_email %} : {{ user.email }} <br>
+                {% trans "E-mail address" %} : {{ user.email }} <br>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                {% get_verbose_field_name user.profile "client_type" as var_client_type %}
-                {% get_verbose_field_name user.profile "current_position" as var_current_position %}
-                {% get_verbose_field_name user.profile "employer" as var_employer %}
-                {% get_verbose_field_name user.profile "language" as var_language %}
+                {% get_verbose_field_name user.profile "client_type" as client_type %}
+                {% get_verbose_field_name user.profile "current_position" as current_position %}
+                {% get_verbose_field_name user.profile "employer" as employer %}
+                {% get_verbose_field_name user.profile "language" as language %}
 
-                {% trans var_client_type %} : {%trans user.profile.client_type %}<br>
-                {% trans var_current_position %} : {%trans user.profile.get_current_position_display %}<br>
-                {% trans var_employer %} : {%trans user.profile.employer %}<br>
-                {% trans var_language %} : {%trans user.profile.get_language_display %}<br>
+                {{ client_type }} : {%trans user.profile.get_client_type_display %} <br>
+                {{ current_position }} : {{ user.profile.get_current_position_display }}<br>
+                {{ employer }} : {%trans user.profile.employer %}<br>
+                {{ language }} : {%trans user.profile.get_language_display %}<br>
 
             </div>
         </div>
