--- a/vol/templates/vol/type_avion_add.html
+++ b/vol/templates/vol/type_avion_add.html
@@ -1,10 +1,10 @@
 {% extends 'vol/base_homepage.html' %}
 {% load i18n %}
-{% block title %} Nouveau type d'avion {% endblock %}
+{% block title %} {% trans "New aircraft type"%} {% endblock %}
 {% block content %}
 
 <div class="row">
-    <div class="col"><h2 class="display-4 mt-4 mb-4">Nouveau type d'avion</h2></div>
+    <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "New aircraft type"%}</h2></div>
 </div>
 {% load widget_tweaks %}
     <form method="POST" class="post-form" id="new_pilote">{% csrf_token %}
@@ -29,19 +29,19 @@
 
         <div class="form-row">
             <div class="form-group col-md-12">
-                <button type="submit" class="save btn btn-primary">Enregistrer</button>
+                <button type="submit" class="save btn btn-primary">{% trans "Save"%}</button>
             </div>
         </div>
     </form>
 
 
     <div class="row">
-        <div class="col"><h2 class="display-4 mt-4 mb-4">Liste des types d'avions</h2></div>
+        <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "List of aircraft types"%}</h2></div>
     </div>
     <div class="row">
         <div class="col">
             <div class="alert alert-warning" role="alert">
-                Il est impossible de supprimer un type d'avion lié à un avion. Afin de supprimer un type d'avion, il faut en premier lieu supprimer ou modifier le ou les avions liés.
+                {% trans "It is impossible to delete an aircraft type linked to a plane. In order to delete an aircraft type, it is first necessary to delete or modify the linked plane(s)." %}
             </div>
         </div>
     </div>
@@ -51,9 +51,9 @@
                 <table class="table table-striped table-bordered table-hover table-sm dt-responsive nowrap" id="table_id">
                     <thead>
                     <tr class="thead-dark">
-                        <th scope="col" style="width: 45%">Type d'avion</th>
-                        <th scope="col" style="width: 45%">Nombre de moteurs</th>
-                        <th scope="col" style="width: 10%">Actions</th>
+                        <th scope="col" style="width: 45%">{% trans "Aircraft type"%}</th>
+                        <th scope="col" style="width: 45%">{% trans "Amount of engines"%}</th>
+                        <th scope="col" style="width: 10%">{% trans "Actions"%}</th>
                     </tr>
                 </thead>
                     <tbody>
@@ -71,9 +71,9 @@
                                             {% for typ_avion in type_avion_exists %}
                                                 {% if type_avion.type_avion|stringformat:"s" == typ_avion.0|stringformat:"s" %}
                                                     {% if typ_avion.1 == True %}
-                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Impossible de supprimer le type d'avion car un avion lui est lié" onclick="return confirm('Voulez-vous vraiement supprimer ce type d'avion ?')"><button type="submit" class="btn btn-secondary btn-sm" disabled><i class="far fa-trash-alt"></i></button>
+                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="{% trans "Unable to delete the aircraft type because a plane is linked to it" %}" onclick="return confirm('{% trans "Do you really want to delete this aircraft type?" %}')"><button type="submit" class="btn btn-secondary btn-sm" disabled><i class="far fa-trash-alt"></i></button>
                                                     {% else %}
-                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le type d'avion" onclick="return confirm('Voulez-vous vraiement supprimer ce type d\'avion ?')"><button type="submit" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
+                                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="{% trans "Delete the aircraft type" %}" onclick="return confirm('{% trans "Do you really want to delete this aircraft type?" %}')"><button type="submit" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
                                                     {% endif %}
                                                 {% endif %}
                                             {% endfor %}
@@ -88,7 +88,7 @@
             </div>
         </div>
     {% else %}
-        <p>Il n'y a pas de types d'avions enregistrés.</p>
+        <p>{% trans "There are no registered aircraft types. "%}</p>
     {% endif %}
 
 {% endblock %}
