--- a/vol/templates/registration/password_change_form.html
+++ b/vol/templates/registration/password_change_form.html
@@ -1,7 +1,8 @@
 {% extends "vol/base_homepage.html" %}
+{% load i18n %}
 {% block active_secondary_nav %}{% endblock %}
 {% block content %}
 
-<h1>Réinitialisation du mot de passe</h1>
+<h1>{% trans "Password reset" %}</h1>
 
 {% endblock %}
