--- a/vol/templates/registration/password_reset_complete.html
+++ b/vol/templates/registration/password_reset_complete.html
@@ -1,6 +1,7 @@
 {% extends "vol/base_homepage.html" %}
+{% load i18n %}
 {% block active_secondary_nav %}{% endblock %}
 {% block content %}
-  <h1>The password has been changed!</h1>
-  <p><a href="{% url 'login' %}">log in again?</a></p>
+  <h1>{% trans "The password has been changed!" %}</h1>
+  <p><a href="{% url 'login' %}">{% trans "Login again?" %}</a></p>
 {% endblock %}
