--- a/vol/templates/registration/password_reset_done.html
+++ b/vol/templates/registration/password_reset_done.html
@@ -1,5 +1,6 @@
 {% extends "vol/base_homepage.html" %}
+{% load i18n %}
 {% block active_secondary_nav %}{% endblock %}
 {% block content %}
-  <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
+  <p>{% trans "We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder." %}</p>
 {% endblock %}
