--- a/vol/templates/registration/password_reset_form.html
+++ b/vol/templates/registration/password_reset_form.html
@@ -1,4 +1,5 @@
 {% extends "vol/base_homepage.html" %}
+{% load i18n %}
 {% block active_secondary_nav %}{% endblock %}
 {% block content %}
   <form action="" method="post">
@@ -8,6 +9,6 @@
   {% endif %}
     <p>{{ form.email.label_tag }}</p>
     <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password">
+    <input type="submit" class="btn btn-default btn-lg" value="{% trans 'Reset password' %}">
   </form>
 {% endblock %}
