--- a/vol/templates/registration/password_reset_confirm.html
+++ b/vol/templates/registration/password_reset_confirm.html
@@ -1,19 +1,20 @@
 {% extends "vol/base_homepage.html" %}
+{% load i18n %}
 {% block active_secondary_nav %}{% endblock %}
 {% block content %}
     {% if validlink %}
-        <p>Please enter (and confirm) your new password.</p>
+        <p>{% trans "Please enter (and confirm) your new password." %}</p>
         <form action="" method="post">
         {% csrf_token %}
             <table>
                 <tr>
                     <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
+                        <label for="id_new_password1">{% trans "New password:" %}</label></td>
                     <td>{{ form.new_password1 }}</td>
                 </tr>
                 <tr>
                     <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
+                        <label for="id_new_password2">{% trans "Confirm password:" %}</label></td>
                     <td>{{ form.new_password2 }}</td>
                 </tr>
                 <tr>
@@ -23,7 +24,7 @@
             </table>
         </form>
     {% else %}
-        <h1>Password reset failed</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+        <h1>{% trans "Password reset failed" %}</h1>
+        <p>{% trans "The password reset link was invalid, possibly because it has already been used. Please request a new password reset." %}</p>
     {% endif %}
 {% endblock %}
