--- a/vol/templates/vol/profile.html
+++ b/vol/templates/vol/profile.html
@@ -110,7 +110,11 @@
                     </div>
                 </div>
             </div>
-            <input type="submit" value="Modifier">
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <button type="submit" class="save btn btn-primary">{% trans "Save" %}</button>
+                </div>
+            </div>
         </form>
         {% endif %}
     {% else %}
