--- a/vol/templates/vol/vol_add.html
+++ b/vol/templates/vol/vol_add.html
@@ -141,7 +141,7 @@
                   <div class="itemAccordion">
                     <label>
                       <a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne7" aria-expanded="true" aria-controls="collapseOne7">
-                        {% trans "Conversion" %} +
+                        {% trans "Convert" %} +
                       </a>
                     </label>
                     <div id="collapseOne7" class="collapse">
@@ -167,7 +167,7 @@
                   <div class="itemAccordion">
                     <label>
                       <a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne6" aria-expanded="true" aria-controls="collapseOne6">
-                        {% trans "Conversion" %} +
+                        {% trans "Convert" %} +
                       </a>
                     </label>
                     <div id="collapseOne6" class="collapse">
@@ -216,8 +216,8 @@
                                 </div>
                             </div>
                             <div class="form-group col-md-4">
-                                <label>{% trans "Conversion" %}</label>
-                                <input type="text" name="base_10" id="deci_simu" class="form-control form-control" placeholder="Durée simu" onkeyup="calculate('simu');">
+                                <label>{% trans "Convert" %}</label>
+                                <input type="text" name="base_10" id="deci_simu" class="form-control form-control" placeholder="{% trans "Simulator duration" %}" onkeyup="calculate('simu');">
                             </div>
                         </div>
                     </div>
@@ -250,8 +250,8 @@
                                 </div>
                             </div>
                             <div class="form-group col-md-4">
-                                <label>{% trans "Conversion" %}</label>
-                                <input type="text" name="base_10" id="deci_ifr" class="form-control form-control" placeholder="Durée IFR" onkeyup="calculate('ifr');">
+                                <label>{% trans "Convert" %}</label>
+                                <input type="text" name="base_10" id="deci_ifr" class="form-control form-control" placeholder="{% trans "IFR duration" %}" onkeyup="calculate('ifr');">
                             </div>
                         </div>
                     </div>
@@ -286,8 +286,8 @@
                                 </div>
                             </div>
                             <div class="form-group col-md-4">
-                                <label>{% trans "Conversion" %}</label>
-                                <input type="text" name="base_10" id="deci_dc" class="form-control form-control" placeholder="Durée DC" onkeyup="calculate('dc');">
+                                <label>{% trans "Convert" %}</label>
+                                <input type="text" name="base_10" id="deci_dc" class="form-control form-control" placeholder="{% trans "DC duration" %}" onkeyup="calculate('dc');">
                             </div>
                         </div>
                     </div>
@@ -305,7 +305,6 @@
                 </div>
             </div>
         </div>
-
 
         <div class="form-row">
             <div class="form-group col-md-12">
