--- a/vol/templates/vol/pilote_add.html
+++ b/vol/templates/vol/pilote_add.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="row">
-    <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "New Pilot" %}</h2></div>
+    <div class="col"><h2 class="display-4 mt-4 mb-4">{% trans "New pilot" %}</h2></div>
 </div>
 {% load widget_tweaks %}
     <form method="POST" class="post-form" id="new_pilote">{% csrf_token %}
