--- a/vol/templates/vol/somme.html
+++ b/vol/templates/vol/somme.html
@@ -1,5 +1,6 @@
 {% extends 'vol/base_homepage.html' %}
 {% load i18n %}
+{% load l10n %}
 {% block title %} {% trans "Totals" %} {% endblock %}
 {% block content %}
 
